@@ -5,6 +5,7 @@
 2. Fixed the problem with <pre>.
 3. Fixed issue with unclosed Tags, again...
 4. remove preg_quote on selector match function: [attribute*=value];
+5. Fixed the bug of smarty tags.
 
 
 [PHP Simple HTML DOM Parser v1.10 is released]
